# pysics

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  setup.py
pysics/: __init__.py  main.py  particle.html  particle.pxd  particle.py  particle.pyx  render.py  simulation.html  simulation.py  simulation.pyx  world.py
pysics/collision/: aabb.py  bounding_volume.py
pysics/collision/broad_phase/: sort_and_sweep.py
pysics/dynamics/bodies/: body.py  rigid_body.py
pysics/dynamics/bodies/shapes/: circle.py  polygon.py  rectangle.py  shape.py
pysics/rendering/: pygame_renderer.py  renderer.py
