[tool.poetry]
name = "pysics"
version = "0.1.0"
description = "A 2d physics simulation."
authors = ["Noah Farr <login@noahfarr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
raylib = "^5.0.0.3"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
